fix for overflow scrollbars showing up on Windows

--- a/web/cslivecode.css
+++ b/web/cslivecode.css
@@ -96,6 +96,7 @@ header > nav > i {
   height: calc(100% - 3em);
   width: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .headerTab {
